Añadiendo modelo de recomendacion

--- a/PC4PROGRAMACION.csproj
+++ b/PC4PROGRAMACION.csproj
@@ -20,6 +20,8 @@
 
     <PackageReference Include="Microsoft.ML" Version="3.0.1" />
     <PackageReference Include="Microsoft.ML.LightGbm" Version="3.0.1" />
+    <PackageReference Include="Microsoft.ML" Version="3.0.1" />
+    <PackageReference Include="Microsoft.ML.Recommender" Version="0.21.1" />
   </ItemGroup>
 
 </Project>
